--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,9 +2,13 @@ name: Backend CI
 
 on:
   push:
+    branches:
+      - '**'
     paths:
       - 'backend/**'
   pull_request:
+    branches:
+      - '**'
     paths:
       - 'backend/**'
 
