--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,10 +1,14 @@
 name: Frontend CI
 
 on:
-  push:
+  push: 
+    branches:
+      - '**'
     paths:
       - 'frontend/**'
   pull_request:
+    branches:
+      - '**'
     paths:
       - 'frontend/**'
 
