--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
