git ignore update2

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # ─────────────────────────────────────
-# Common ignores (logs, system files)
+# 📁 공통 무시 파일 (시스템/에디터 로그 등)
 # ─────────────────────────────────────
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -17,28 +17,31 @@ lerna-debug.log*
 *.sw?
 
 # ─────────────────────────────────────
-# Gradle / Java backend
+# 🧱 Gradle / Java 백엔드
 # ─────────────────────────────────────
-.gradle/
+/.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-# STS / Eclipse
+# Eclipse / STS
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
 .sts4-cache
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-# IntelliJ IDEA
+# ─────────────────────────────────────
+# 🧠 IntelliJ IDEA (루트 + 하위 디렉토리 모두)
+# ─────────────────────────────────────
 .idea/
+**/.idea/
 *.iws
 *.iml
 *.ipr
@@ -46,28 +49,25 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-# NetBeans
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# ─────────────────────────────────────
+# 🧱 NetBeans
+# ─────────────────────────────────────
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
 # ─────────────────────────────────────
-# VSCode (optional)
+# 💻 VS Code 설정 (루트 전용)
 # ─────────────────────────────────────
 .vscode/
 !.vscode/extensions.json
 
 # ─────────────────────────────────────
-# Frontend Node/JS (assumed in frontend/)
+# 🌐 프론트엔드 (Node.js 등)
 # ─────────────────────────────────────
 frontend/node_modules/
 frontend/dist/
 frontend/dist-ssr/
 frontend/*.local
-
-# IntelliJ IDEA
-.idea/           # 루트 .idea
-**/.idea/        # 하위 디렉토리 내 .idea (예: backend/.idea/, frontend/.idea/)
-*.iml
