jwt 토큰 인증 시스템 추가

--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,17 @@ lerna-debug.log*
 # ─────────────────────────────────────
 # 🧱 Gradle / Java 백엔드
 # ─────────────────────────────────────
-/.gradle/
-build/
-# Gradle build output and compiled class files
+.gradle/
 **/build/
+**/out/
 *.class
+*.lock
+*.bin
+*.probe
 
+
+# Gradle Wrapper JAR만 포함
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 # Eclipse / STS
 .apt_generated
@@ -38,20 +40,21 @@ build/
 .springBeans
 .sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
 # ─────────────────────────────────────
-# 🧠 IntelliJ IDEA (루트 + 하위 디렉토리 모두)
+# 🧠 IntelliJ IDEA
 # ─────────────────────────────────────
+# 전체 무시하되 설정 일부만 포함
 .idea/
 **/.idea/
 *.iws
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+
+# IDEA 설정 예외 (공유 목적)
+!/.idea/misc.xml
+!/.idea/compiler.xml
 
 # ─────────────────────────────────────
 # 🧱 NetBeans
@@ -63,7 +66,7 @@ nbdist/
 .nb-gradle/
 
 # ─────────────────────────────────────
-# 💻 VS Code 설정 (루트 전용)
+# 💻 VS Code 설정
 # ─────────────────────────────────────
 .vscode/
 !.vscode/extensions.json
