--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.513.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.2",
