--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ lerna-debug.log*
 # 🧱 Gradle / Java 백엔드
 # ─────────────────────────────────────
 .gradle/
+backend/.gradle/
 **/build/
 **/out/
 *.class
