doker option modified

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=gamelier-backend
 
 steam.api-key= 93E85698345073E4D73FF437E24CE7D3
 jwt.secret=6FA2C17B4EA04DE09A1107DF304F6C12
+server.port=${PORT:8080}
 
 
