--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,6 @@ COPY . .
 RUN ./gradlew build
 
 EXPOSE 8080
-CMD ["java", "-jar", "build/libs/backend-0.0.1-SNAPSHOT.jar"]
+
+# 앱 실행은 여기서
+CMD ["./gradlew", "bootRun"]
