프론트마무리

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,15 +1,16 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
-  "compilerOptions": {
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
-  }
+	"files": [],
+	"references": [
+		{
+			"path": "./tsconfig.app.json"
+		},
+		{
+			"path": "./tsconfig.node.json"
+		}
+	],
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"noUnusedLocals": false,
+		"noUnusedParameters": false
+	}
 }
